--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
       <h5>Please add yourself to team directory</h5>
     </div>
 
-    <form method='POST' action='/categories'>
+    <form method='POST' action='/users'>
       <div class='col-xs-12 col-md-9 form-group'>
         <input name='name' placeholder='Your Name' class='form-control'/>
       </div>
