--- a/views/layout.html
+++ b/views/layout.html
@@ -8,22 +8,24 @@
 
   <body>
     <div class = 'container'>
-      <h1>Welcome to AMCE!!!</h1>
+      <h1>A.M.C.E. User Page</h1>
       <nav class = 'nav nav-tabs'>
-        <li class= '{% if current===undefined %}active{% endif %}''><a href='/'>Home</a></li>
-        <li class= '{% if current===x %}active{% endif %}''><a href='/users'>Users</a></li>
-        <li class= '{% if current===x %}active{% endif %}''><a href='/users/team%20leader'>Team Leaders</a></li>
-        <li class= '{% if current===x %}active{% endif %}''><a href='/users/manager'>Managers</a></li>
+        <li class= '{% if type===undefined %}active{% endif %}''><a href='/'>Home</a></li>
+        <li class= '{% if type==="users" %}active{% endif %}''><a href='/users'>Users</a></li>
+        <li class= '{% if type==="team leaders" %}active{% endif %}''><a href='/users/team%20leaders'>Team Leaders</a></li>
+        <li class= '{% if type==="managers" %}active{% endif %}''><a href='/users/managers'>Managers</a></li>
       </nav>
-    {% block content %}
-
-    {% endblock %}
-
-      <footer>
-        <pre class='col-xs-9 col-md-6'>{{usersJSON}}</pre>
-      </footer>
     </div>
 
+    {% block content %}
+      Hello!
+    {% endblock %}
+
+    <footer class = 'container'>
+      <div class ='col-md-12 col-xl-8'>
+        <pre class='col-xs-9 col-md-7'>{{usersJSON}}</pre>
+      </div>
+    </footer>
 
     <script scr='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'></script>
   </body>
